--- a/help/help.htm
+++ b/help/help.htm
@@ -105,7 +105,7 @@ that those data are protected from non authorized access.</p>
 <h2><a name="license">License</a></h2>
 <p>Boilerplate_XH is licensed under
 <a href="http://www.gnu.org/licenses/gpl.html">GPLv3</a>.</p>
-<p>&copy; 2012 Christoph M. Becker</p>
+<p>&copy; 2012-2013 Christoph M. Becker</p>
 <div class="toplink"><a href="#">back to top</a></div>
 
 <h2><a name="credits">Credits</a></h2>
