--- a/help/help.htm
+++ b/help/help.htm
@@ -110,6 +110,8 @@ performance reasons using newsbox() instead is preferable.</p>
 <p>Boilerplate_XH is licensed under <a
 href="http://www.gnu.org/licenses/gpl.html">GPLv3</a>.</p>
 <p>&copy; 2012-2013 Christoph M. Becker</p>
+<p>Russian tranlation &copy; 2012 Lubomyr Kydray<br>
+Slovak translation &copy; 2012 Dr. Martin Sereday</p>
 <div class="toplink"><a href="#">back to top</a></div>
 
 <h2><a name="credits">Credits</a></h2>
