--- a/help/help_de.htm
+++ b/help/help_de.htm
@@ -118,6 +118,8 @@ vorzuziehen.</p>
 <p>Boilerplate_XH kann unter Einhaltung der <a
 href="http://www.gnu.org/licenses/gpl.html">GPLv3</a> verwendet werden.</p>
 <p>&copy; 2012-2013 Christoph M. Becker</p>
+<p>Russische Übersetzung &copy; 2012 Lubomyr Kydray<br>
+Slovakische Übersetzung &copy; 2012 Dr. Martin Sereday</p>
 <div class="toplink"><a href="#">zum Seitenanfang</a></div>
 
 <h2><a name="credits">Credits</a></h2>
