fixed language texts and manuals regarding allowed characters for text block names (reported by Lariss)

--- a/help/help.htm
+++ b/help/help.htm
@@ -84,7 +84,7 @@ self
 explaining, but some notes might be appropriate:</p>
 <ul>
 <li>The text blocks' names can be choosen arbitrarily, but may contain only
-alphanumeric characters (a-z and 0-9), underscores and hyphens.</li>
+lowercase letters (a-z), digits (0-9), underscores and hyphens.</li>
 <li>The inputs at the right are containing the appropriate plugin call. Just
 click them once and copy the selection to the clipboard for later pasting in a
 CMSimple_XH page.</li>
