--- a/help/help_de.htm
+++ b/help/help_de.htm
@@ -89,7 +89,7 @@ weitgehend selbsterklärend sein, aber ein paar Hinweise erscheinen
 angebracht:</p>
 <ul>
 <li>Die Namen der Textblöcke können beliebig gewählt werden, aber sie dürfen nur
-alphanumerische Zeichen (a-z und 0-9), Unter- und Bindestriche enthalten</li>
+Kleinbuchstaben (a-z), Ziffern (0-9), Unter- und Bindestriche enthalten</li>
 <li>Die Eingabefelder rechts enthalten den benötigten Pluginaufruf. Klicken Sie
 sie einfach an und kopieren Sie die Auswahl in die Zwischenablage, um sie später
 auf einer CMSimple_XH Seite einfügen zu können.</li>
