--- a/help/help_de.htm
+++ b/help/help_de.htm
@@ -1,17 +1,17 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
-    "http://www.w3.org/TR/html4/loose.dtd">
+<!DOCTYPE html>
 <html lang="de">
 
 <head>
 <meta http-equiv="content-type" content="text/html;charset=utf-8">
-<title>Boilerplate_XH - Handbuch</title>
+<title>Boilerplate_XH &ndash; Handbuch</title>
 <link rel="stylesheet" type="text/css" href="./stylesheet.css">
 </head>
 
 <body>
 
-<h1>Boilerplate_XH - ein CMSimple_XH Plugin</h1>
-<img src="../boilerplate.png" style="float:left; margin-right: 16px">
+<h1>Boilerplate_XH &ndash; ein CMSimple_XH Plugin</h1>
+<img src="../boilerplate.png" style="float:left; margin-right: 16px"
+     alt="Bauklötze">
 <p style="text-align:justify">Boilerplate_XH ermöglicht die Verwaltung und
 (Wieder-)Verwendung von (X)HTML Textblöcken auf CMSimple_XH Seiten. Auf diese
 Weise können sie Text einmal schreiben, und ihn auf mehreren Seiten
@@ -37,30 +37,35 @@ kompletten Seiteninhalt durch einen Boilerplate_XH Textblock ersetzen.</p>
 <p><strong>Bitte lesen Sie diese Dokumentation <em>bevor</em> Sie auf Probleme
 stoßen!</strong></p>
 
-<h2><a name="notice">Wichtiger Hinweis</a></h2>
+<section id="notice">
+<h2>Wichtiger Hinweis</h2>
 <p><strong>Boilerplate_XH konnte bisher nicht in diversen Umgebungen getestet
 werden. Es ist ein so genannter Release Candidate. Vorsicht bei der
 Verwendung!</strong></p>
 <div class="toplink"><a href="#">zum Seitenanfang</a></div>
+</section>
 
-<h2><a name="requirements">Voraussetzungen</a></h2>
+<section id="requirements">
+<h2>Voraussetzungen</h2>
 <p>Boilerplate_XH ist ein Plugin für CMSimple_XH. Es benötigt eine UTF-8
 kodierte Version.</p>
 <div class="toplink"><a href="#">zum Seitenanfang</a></div>
+</section>
 
-<h2><a name="installation">Installation</a></h2>
+<section id="installation">
+<h2>Installation</h2>
 <p>Die Installation erfolgt wie bei vielen anderen CMSimple_XH-Plugins auch. Im
 <a href="http://www.cmsimple-xh.org/wiki/doku.php/de:installation">
 CMSimple_XH-Wiki</a> finden Sie weitere Details.</p>
 <ol>
-<li><strong>Sichern Sie die Daten auf Ihrem Server.</strong></li>
+<li>Sichern Sie die Daten auf Ihrem Server.</li>
 <li>Entpacken Sie die ZIP-Datei auf Ihrem Rechner.</li>
 <li>Laden Sie das ganze Verzeichnis boilerplate/ auf Ihren Server in
 CMSimple_XHs Plugin-Verzeichnis hoch.</li>
 <li>Machen Sie die Unterverzeichnisse config/, css/, languages/ und den
 Datenordner des Plugins beschreibbar.</li>
-<li><strong>Gehen Sie zu "Plugins&rarr;Boilerplate" im Administrationsbereich,
-um zu prüfen, ob alle Voraussetzungen erfüllt sind.</strong></li>
+<li>Gehen Sie zu Plugins &rarr; Boilerplate im Administrationsbereich,
+um zu prüfen, ob alle Voraussetzungen erfüllt sind.</li>
 </ol>
 <p>Beachten Sie, dass die Datendateien von Boilerplate_XH durch direkten Aufruf
 ihrer URL eingesehen werden können. Eine .htaccess Datei um das zu verhindern
@@ -68,25 +73,28 @@ befindet sich bereits im voreingestellten Datenordner. Für andere Server oder
 für angepasste Datenordner müssen Sie selbst darauf achten, dass diese Daten vor
 nicht autorisiertem Zugriff geschützt sind.</p>
 <div class="toplink"><a href="#">zum Seitenanfang</a></div>
+</section>
 
-<h2><a name="settings">Einstellungen</a></h2>
+<section id="settings">
+<h2>Einstellungen</h2>
 <p>Die Plugin-Konfiguration erfolgt wie bei vielen anderen CMSimple_XH-Plugins
-auch im Administrationsbereich der Website. Wählen Sie
-"Plugins"&rarr;"Boilerplate".</p>
+auch im Administrationsbereich der Website. Wählen Sie Plugins &rarr;
+Boilerplate.</p>
 <p>Sie können die Voreinstellungen von Boilerplate_XH unter "Konfiguration"
 ändern. Hinweise zu den Optionen werden beim Überfahren der Hilfe-Icons mit der
 Maus angezeigt.</p>
 <p>Die Lokalisierung wird unter "Sprache" vorgenommen. Sie können die
-Sprachtexte in Ihre eigene Sprache übersetzen, oder diese Ihren Wünschen gemäß
-anpassen.</p>
+Sprachtexte in Ihre eigene Sprache übersetzen (falls keine entsprechende
+Sprachdatei zur Verfügung steht), oder diese Ihren Wünschen gemäß anpassen.</p>
 <p>Das Aussehen von Boilerplate_XH kann unter "Stylesheet" angepasst werden.</p>
 <div class="toplink"><a href="#">zum Seitenanfang</a></div>
+</section>
 
-<h2><a name="usage">Verwendung</a></h2>
+<section id="usage">
+<h2>Verwendung</h2>
 <p>Sie können Ihre Textblöcke im Administrationsbereich verwalten; gehen Sie zu
-"Plugins"&rarr;"Boilerplate"&rarr;"Text-Blöcke". Die Verwendung sollte
-weitgehend selbsterklärend sein, aber ein paar Hinweise erscheinen
-angebracht:</p>
+Plugins &rarr; Boilerplate &rarr; Text-Blöcke. Die Verwendung sollte weitgehend
+selbsterklärend sein, aber ein paar Hinweise erscheinen angebracht:</p>
 <ul>
 <li>Die Namen der Textblöcke können beliebig gewählt werden, aber sie dürfen nur
 Kleinbuchstaben (a-z), Ziffern (0-9), Unter- und Bindestriche enthalten</li>
@@ -105,24 +113,30 @@ Pluginaufruf:</p>
 <pre>{{{PLUGIN:boilerplate('NAME');}}}</pre>
 <p>Ersetzen Sie NAME durch den Namen eines bereits definierten Textblocks. Die
 einfachste Möglichkeit ist es den Pluginaufruf aus der Administration von
-Boilerplate_XH per Copy&Paste zu übernehmen.</p>
+Boilerplate_XH per Copy&amp;Paste zu übernehmen.</p>
 <p>Beachten Sie, dass die Verwendung von boilerplate() im Template möglich ist,
 aber aus Performancegründen ist hier die Verwendung von newsbox()
 vorzuziehen.</p>
 <div class="toplink"><a href="#">zum Seitenanfang</a></div>
+</section>
 
-<!--<h2><a name="limitations">Limitations</a></h2>
+<!--<section id="limitations">
+<h2>Limitations</h2>
 <div class="toplink"><a href="#">back to top</a></div>
--->
-<h2><a name="license">Lizenz</a></h2>
+</section>-->
+
+<section id="license">
+<h2>Lizenz</h2>
 <p>Boilerplate_XH kann unter Einhaltung der <a
 href="http://www.gnu.org/licenses/gpl.html">GPLv3</a> verwendet werden.</p>
 <p>&copy; 2012-2014 Christoph M. Becker</p>
 <p>Russische Übersetzung &copy; 2012 Lubomyr Kydray<br>
 Slovakische Übersetzung &copy; 2012 Dr. Martin Sereday</p>
 <div class="toplink"><a href="#">zum Seitenanfang</a></div>
+</section>
 
-<h2><a name="credits">Credits</a></h2>
+<section id="credits">
+<h2>Credits</h2>
 <p>Boilerplate_XH wurde durch r&uuml;hgallisaniener und Hoffmann5928
 angeregt.</p>
 <p>Das Plugin-Icon wurde von <a href="http://www.notmart.org/">Mart (Marco
@@ -139,6 +153,7 @@ Harteg</a>, den "Vater" von CMSimple, und allen Entwicklern von <a
 href="http://www.cmsimple-xh.org/de/">CMSimple_XH</a> ohne die es dieses
 phantastische CMS nicht gäbe.</p>
 <div class="toplink"><a href="#">zum Seitenanfang</a></div>
+</section>
 
 </div>
 
