--- a/help/help_de.htm
+++ b/help/help_de.htm
@@ -38,8 +38,7 @@ stoßen!</strong></p>
 
 <section id="requirements">
 <h2>Voraussetzungen</h2>
-<p>Boilerplate_XH ist ein Plugin für CMSimple_XH. Es benötigt eine UTF-8
-kodierte Version.</p>
+<p>Boilerplate_XH ist ein Plugin für CMSimple_XH≥ 1.7.0.</p>
 <div class="toplink"><a href="#">zum Seitenanfang</a></div>
 </section>
 
@@ -92,16 +91,15 @@ Kleinbuchstaben (a-z), Ziffern (0-9), Unter- und Bindestriche enthalten</li>
 <li>Die Eingabefelder rechts enthalten den benötigten Pluginaufruf. Klicken Sie
 sie einfach an und kopieren Sie die Auswahl in die Zwischenablage, um sie später
 auf einer CMSimple_XH Seite einfügen zu können.</li>
-<li>Von CMSimple_XH 1.5.2 an können die Textblöcke mit dem selben Editor
-bearbeitet werden, mit dem auch CMSimple_XH Seiten bearbeitet werden. In älteren
-Versionen ist nur eine Textarea verfügbar.</li>
-<li>Von CMSimple_XH 1.5 an können Sie Pluginaufrufe in den Textblöcken
-verwenden, so dass Sie TextBlöcke verschachteln können oder nach Wunsch ein
+<li>Die Textblöcke können mit dem selben Editor
+bearbeitet werden, mit dem auch CMSimple_XH Seiten bearbeitet werden.</li>
+<li>Pluginaufrufe können in den Textblöcken
+verwenden werden, so dass Sie TextBlöcke verschachteln können oder nach Wunsch ein
 anderes Plugin aufrufen können.</li>
 </ul>
 <p>Das Einfügen eines Textblocks auf einer Seite erfolgt mit dem folgenden
 Pluginaufruf:</p>
-<pre>{{{PLUGIN:boilerplate('NAME');}}}</pre>
+<pre>{{{boilerplate('NAME')}}}</pre>
 <p>Ersetzen Sie NAME durch den Namen eines bereits definierten Textblocks. Die
 einfachste Möglichkeit ist es den Pluginaufruf aus der Administration von
 Boilerplate_XH per Copy&amp;Paste zu übernehmen.</p>
