Close #5: get_magic_quotes_runtime() is removed as of PHP 8.0.0
We bump the minimal supported PHP version to 5.4.0, so there is no more
need for this check.

--- a/help/help_de.htm
+++ b/help/help_de.htm
@@ -38,7 +38,7 @@ stoßen!</strong></p>
 
 <section id="requirements">
 <h2>Voraussetzungen</h2>
-<p>Boilerplate_XH ist ein Plugin für CMSimple_XH≥ 1.7.0.</p>
+<p>Boilerplate_XH ist ein Plugin für CMSimple_XH≥ 1.7.0. Es benötigt PHP ≥ 5.4.0.</p>
 <div class="toplink"><a href="#">zum Seitenanfang</a></div>
 </section>
 
