Close #1: Store text blocks in content/ folder
Since the respective config option was the only one, this also allows
us to get rid if config.php altogether.

--- a/help/help_de.htm
+++ b/help/help_de.htm
@@ -52,16 +52,10 @@ CMSimple_XH-Wiki</a> finden Sie weitere Details.</p>
 <li>Entpacken Sie die ZIP-Datei auf Ihrem Rechner.</li>
 <li>Laden Sie das ganze Verzeichnis boilerplate/ auf Ihren Server in
 CMSimple_XHs Plugin-Verzeichnis hoch.</li>
-<li>Machen Sie die Unterverzeichnisse config/, css/, languages/ und den
-Datenordner des Plugins beschreibbar.</li>
+<li>Machen Sie die Unterverzeichnisse css/ und languages/ beschreibbar.</li>
 <li>Gehen Sie zu Plugins &rarr; Boilerplate im Administrationsbereich,
 um zu prüfen, ob alle Voraussetzungen erfüllt sind.</li>
 </ol>
-<p>Beachten Sie, dass die Datendateien von Boilerplate_XH durch direkten Aufruf
-ihrer URL eingesehen werden können. Eine .htaccess Datei um das zu verhindern
-befindet sich bereits im voreingestellten Datenordner. Für andere Server oder
-für angepasste Datenordner müssen Sie selbst darauf achten, dass diese Daten vor
-nicht autorisiertem Zugriff geschützt sind.</p>
 <div class="toplink"><a href="#">zum Seitenanfang</a></div>
 </section>
 
@@ -70,9 +64,6 @@ nicht autorisiertem Zugriff geschützt sind.</p>
 <p>Die Plugin-Konfiguration erfolgt wie bei vielen anderen CMSimple_XH-Plugins
 auch im Administrationsbereich der Website. Wählen Sie Plugins &rarr;
 Boilerplate.</p>
-<p>Sie können die Voreinstellungen von Boilerplate_XH unter "Konfiguration"
-ändern. Hinweise zu den Optionen werden beim Überfahren der Hilfe-Icons mit der
-Maus angezeigt.</p>
 <p>Die Lokalisierung wird unter "Sprache" vorgenommen. Sie können die
 Sprachtexte in Ihre eigene Sprache übersetzen (falls keine entsprechende
 Sprachdatei zur Verfügung steht), oder diese Ihren Wünschen gemäß anpassen.</p>
