--- a/help/help.htm
+++ b/help/help.htm
@@ -51,15 +51,10 @@ wiki</a> for further details.</p>
 <li>Unzip the distribution on your computer.</li>
 <li>Upload the whole directory boilerplate/ to your server into CMSimple_XH's
 plugins directory.</li>
-<li>Set write permissions to the subdirectories config/, css/, languages/ and
-the plugin's data folder.</li>
+<li>Set write permissions to the subdirectories css/ and languages/.</li>
 <li>Switch to Plugins &rarr; Boilerplate in the back-end to check if all
 requirements are fulfilled.</li>
 </ol>
-<p>Note that the boilerplate data files may be accessed directly by requesting
-their URL. A .htaccess file to prohibit this is already contained in the default
-data folder. For other servers or for custom data folders you have to take care
-for yourself that these data are protected from non authorized access.</p>
 <div class="toplink"><a href="#">back to top</a></div>
 </section>
 
@@ -67,9 +62,6 @@ for yourself that these data are protected from non authorized access.</p>
 <h2>Settings</h2>
 <p>The plugin's configuration is done as with many other CMSimple_XH plugins in
 the website's back-end. Select Plugins &rarr; Boilerplate.</p>
-<p>You can change the default settings of Boilerplate_XH under "Config". Hints
-for the options will be displayed when hovering over the help icon with your
-mouse.</p>
 <p>Localization is done under "Language". You can translate the character
 strings to your own language (if there is no appropriate language file
 available), or customize them according to your needs.</p>
