--- a/help/help_de.htm
+++ b/help/help_de.htm
@@ -31,18 +31,18 @@
 <body>
 <h1 id="boilerplate_xh">Boilerplate_XH</h1>
 <p>Boilerplate_XH ermöglicht die Verwaltung und (Wieder-)Verwendung von HTML Textbausteinen auf CMSimple_XH Seiten. Auf diese Weise können sie Text einmal schreiben, und ihn auf mehreren Seiten wiederverwenden. Eigentlich ist <code>boilerplate()</code> sehr ähnlich zu <code>newsbox()</code>. Aber während <code>newsbox()</code> mit versteckten CMSimple_XH Seiten arbeitet, speichert <code>boilerplate()</code> seinen Inhalt in separaten Dateien. Daher können Sie diese Möglichkeit nutzen, um Ihr content.htm klein zu halten, in dem Sie den kompletten Seiteninhalt durch einen Boilerplate_XH Textbaustein ersetzen.</p>
-<h2 id="table-of-contents">Table of Contents</h2>
+<h2 id="inhaltsverzeichnis">Inhaltsverzeichnis</h2>
 <ul>
-<li><a href="#requirements">Voraussetzungen</a></li>
+<li><a href="#voraussetzungen">Voraussetzungen</a></li>
 <li><a href="#download">Download</a></li>
 <li><a href="#installation">Installation</a></li>
-<li><a href="#settings">Einstellungen</a></li>
-<li><a href="#usage">Verwendung</a></li>
-<li><a href="#license">Lizenz</a></li>
-<li><a href="#credits">Danksagung</a></li>
+<li><a href="#einstellungen">Einstellungen</a></li>
+<li><a href="#verwendung">Verwendung</a></li>
+<li><a href="#lizenz">Lizenz</a></li>
+<li><a href="#danksagung">Danksagung</a></li>
 </ul>
 <h2 id="voraussetzungen">Voraussetzungen</h2>
-<p>Boilerplate_XH ist ein Plugin für CMSimple_XH ≥ 1.7.0. Es benötigt PHP ≥ 5.6.0 und die JSON Extension.</p>
+<p>Boilerplate_XH ist ein Plugin für CMSimple_XH ≥ 1.7.0. Es benötigt PHP ≥ 7.0.0 und die JSON Extension.</p>
 <h2 id="download">Download</h2>
 <p>Das <a href="https://github.com/cmb69/boilerplate_xh/releases/latest">aktuelle Release</a> kann von Github herunter geladen werden.</p>
 <h2 id="installation">Installation</h2>
