No work in constructors

--- a/tests/approvals/InfoControllerTest.testRenderInfo.approved.html
+++ b/tests/approvals/InfoControllerTest.testRenderInfo.approved.html
@@ -5,4 +5,4 @@
 <div><p class="xh_success">Extension “JSON“ loaded</p></div>
 <div><p class="xh_warning">Folder “./plugins/boilerplate/css“ writable</p></div>
 <div><p class="xh_warning">Folder “./plugins/boilerplate/languages/“ writable</p></div>
-<div><p class="xh_success">Folder “./content/boilerplate/“ writable</p></div>
+<div><p class="xh_warning">Folder “./content/boilerplate/“ writable</p></div>
