--- a/tests/approvals/AdminControllerTest.testRenderMainAdministration.approved.html
+++ b/tests/approvals/AdminControllerTest.testRenderMainAdministration.approved.html
@@ -1,10 +1,10 @@
 <!-- Boilerplate_XH: administration -->
 <h1>Boilerplate – Text Blocks</h1>
-<div id="boilerplate_admin">
+<div id="boilerplate_admin" data-delete-confirmation="Do you want to delete this text block?">
     <table>
         <tr>
             <td>
-                <form action="/?&amp;boilerplate" method="post" onsubmit="return confirm(boilerplate.delete_confirmation);">
+                <form action="/?&amp;boilerplate" method="post" onsubmit="return confirm(document.getElementById('boilerplate_admin').dataset.deleteConfirmation);">
                     <button>Delete</button>
                     <input type="hidden" name="admin" value="plugin_main">
                     <input type="hidden" name="action" value="delete">
@@ -21,7 +21,7 @@
         </tr>
         <tr>
             <td>
-                <form action="/?&amp;boilerplate" method="post" onsubmit="return confirm(boilerplate.delete_confirmation);">
+                <form action="/?&amp;boilerplate" method="post" onsubmit="return confirm(document.getElementById('boilerplate_admin').dataset.deleteConfirmation);">
                     <button>Delete</button>
                     <input type="hidden" name="admin" value="plugin_main">
                     <input type="hidden" name="action" value="delete">
