--- a/tests/approvals/AdminControllerTest.testEditTextBlockSuccess.approved.html
+++ b/tests/approvals/AdminControllerTest.testEditTextBlockSuccess.approved.html
@@ -1,9 +1,9 @@
-<!-- Boilerplate_XH: edit -->
+<!-- Boilerplate edit -->
 <h1>Boilerplate – foo</h1>
 <form class="plugineditform" action="/?&amp;boilerplate" method="post">
-    <textarea class="plugintextarea" name="boilerplate_text" style="height: 600px">
-        &lt;p&gt;some content&lt;/p&gt;    </textarea>
-    <input type="hidden" name="admin" value="plugin_main">
-    <input type="hidden" name="action" value="save">
-    <input type="hidden" name="boilerplate_name" value="foo">
-    <input type="hidden" name="xh_csrf_token" value="9b923b4ec202f67066fe734993b6a9a4"></form>
+  <textarea class="plugintextarea" name="boilerplate_text" style="height: 600px">
+    &lt;p&gt;some content&lt;/p&gt;  </textarea>
+  <input type="hidden" name="admin" value="plugin_main">
+  <input type="hidden" name="action" value="save">
+  <input type="hidden" name="boilerplate_name" value="foo">
+  <input type="hidden" name="xh_csrf_token" value="9b923b4ec202f67066fe734993b6a9a4"></form>
