Add troubleshooting section to user manuals

--- a/help/help.htm
+++ b/help/help.htm
@@ -38,6 +38,7 @@
 <li><a href="#installation">Installation</a></li>
 <li><a href="#settings">Settings</a></li>
 <li><a href="#usage">Usage</a></li>
+<li><a href="#troubleshooting">Troubleshooting</a></li>
 <li><a href="#license">License</a></li>
 <li><a href="#credits">Credits</a></li>
 </ul>
@@ -69,6 +70,8 @@
 <p>Inserting of a text block on a page is done with the following plugin call:</p>
 <pre><code>{{{boilerplate(&#39;%NAME%&#39;)}}}</code></pre>
 <p>Replace <code>%NAME%</code> with the name of an already defined text block. The easiest way is to copy &amp; paste the plugin call from the administration of Boilerplate_XH. Note that using <code>boilerplate()</code> in the template is possible, but for performance reasons using <code>newsbox()</code> instead is preferable.</p>
+<h2 id="troubleshooting">Troubleshooting</h2>
+<p>Report bugs and ask for support either on <a href="https://github.com/cmb69/boilerplate_xh/issues">Github</a> or in the <a href="https://cmsimpleforum.com/">CMSimple_XH Forum</a>.</p>
 <h2 id="license">License</h2>
 <p>Boilerplate_XH is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.</p>
 <p>Boilerplate_XH is distributed in the hope that it will be useful, but <em>without any warranty</em>; without even the implied warranty of <em>merchantibility</em> or <em>fitness for a particular purpose</em>. See the GNU General Public License for more details.</p>
