--- a/help/help_de.htm
+++ b/help/help_de.htm
@@ -38,6 +38,7 @@
 <li><a href="#installation">Installation</a></li>
 <li><a href="#einstellungen">Einstellungen</a></li>
 <li><a href="#verwendung">Verwendung</a></li>
+<li><a href="#problembehebung">Problembehebung</a></li>
 <li><a href="#lizenz">Lizenz</a></li>
 <li><a href="#danksagung">Danksagung</a></li>
 </ul>
@@ -70,6 +71,8 @@
 <pre><code>{{{boilerplate(&#39;%NAME%&#39;)}}}</code></pre>
 <p>Ersetzen Sie <code>%NAME%</code> durch den Namen eines bereits definierten Textbausteins. Die einfachste Möglichkeit ist es den Pluginaufruf aus der Administration von Boilerplate_XH per Copy&amp;Paste zu übernehmen.</p>
 <p>Beachten Sie, dass die Verwendung von <code>boilerplate()</code> im Template möglich ist, aber aus Performancegründen ist hier die Verwendung von <code>newsbox()</code> vorzuziehen.</p>
+<h2 id="problembehebung">Problembehebung</h2>
+<p>Melden Sie Programmfehler und stellen Sie Supportanfragen entweder auf <a href="https://github.com/cmb69/boilerplate_xh/issues">Github</a> oder im <a href="https://cmsimpleforum.com/">CMSimple_XH Forum</a>.</p>
 <h2 id="lizenz">Lizenz</h2>
 <p>Boilerplate_XH ist freie Software. Sie können es unter den Bedingungen der GNU General Public License, wie von der Free Software Foundation veröffentlicht, weitergeben und/oder modifizieren, entweder gemäß Version 3 der Lizenz oder (nach Ihrer Option) jeder späteren Version.</p>
 <p>Die Veröffentlichung von Boilerplate_XH erfolgt in der Hoffnung, daß es Ihnen von Nutzen sein wird, aber <em>ohne irgendeine Garantie</em>, sogar ohne die implizite Garantie der <em>Marktreife</em> oder der <em>Verwendbarkeit für einen bestimmten Zweck</em>. Details finden Sie in der GNU General Public License.</p>
