Use View of Plib_XH
We also checkout Plib_XH for CI.

--- a/tests/approvals/InfoControllerTest.testRenderInfo.approved.html
+++ b/tests/approvals/InfoControllerTest.testRenderInfo.approved.html
@@ -1,7 +1,11 @@
 <!-- Boilerplate info -->
 <h1>Boilerplate 2.1-dev</h1>
 <h4>System check</h4>
-<div><p class="xh_success">PHP version ≥ 7.1.0</p></div>
-<div><p class="xh_warning">Folder “./plugins/boilerplate/css“ writable</p></div>
-<div><p class="xh_warning">Folder “./plugins/boilerplate/languages/“ writable</p></div>
-<div><p class="xh_warning">Folder “./content/boilerplate/“ writable</p></div>
+<div><p class="xh_success">PHP version ≥ 7.1.0</p>
+</div>
+<div><p class="xh_warning">Folder “./plugins/boilerplate/css“ writable</p>
+</div>
+<div><p class="xh_warning">Folder “./plugins/boilerplate/languages/“ writable</p>
+</div>
+<div><p class="xh_warning">Folder “./content/boilerplate/“ writable</p>
+</div>
