Drop useless copyright years
And we drop the file headers of test file altogether.

--- a/help/help_de.htm
+++ b/help/help_de.htm
@@ -77,9 +77,8 @@
 <p>Boilerplate_XH ist freie Software. Sie können es unter den Bedingungen der GNU General Public License, wie von der Free Software Foundation veröffentlicht, weitergeben und/oder modifizieren, entweder gemäß Version 3 der Lizenz oder (nach Ihrer Option) jeder späteren Version.</p>
 <p>Die Veröffentlichung von Boilerplate_XH erfolgt in der Hoffnung, daß es Ihnen von Nutzen sein wird, aber <em>ohne irgendeine Garantie</em>, sogar ohne die implizite Garantie der <em>Marktreife</em> oder der <em>Verwendbarkeit für einen bestimmten Zweck</em>. Details finden Sie in der GNU General Public License.</p>
 <p>Sie sollten ein Exemplar der GNU General Public License zusammen mit Boilerplate_XH erhalten haben. Falls nicht, siehe http://www.gnu.org/licenses/.</p>
-<p>© 2012-2021 Christoph M. Becker</p>
-<p>Russische Übersetzung © 2012 Lubomyr Kydray<br />
-Slovakische Übersetzung © 2012 Dr. Martin Sereday</p>
+<p>Copyright © Christoph M. Becker</p>
+<p>Russische Übersetzung © Lubomyr Kydray<br> Slovakische Übersetzung © Dr. Martin Sereday</p>
 <h2 id="credits">Credits</h2>
 <p>Boilerplate_XH wurde durch <em>rühgallisaniener</em> und <em>Hoffmann5928</em> angeregt.</p>
 <p>Das Plugin-Icon wurde von <a href="http://www.notmart.org/">Mart (Marco Martin)</a> gestaltet. Vielen Dank für die Veröffentlichung dieses Icons unter GPL.</p>
