--- a/help/help.htm
+++ b/help/help.htm
@@ -76,9 +76,8 @@
 <p>Boilerplate_XH is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.</p>
 <p>Boilerplate_XH is distributed in the hope that it will be useful, but <em>without any warranty</em>; without even the implied warranty of <em>merchantibility</em> or <em>fitness for a particular purpose</em>. See the GNU General Public License for more details.</p>
 <p>You should have received a copy of the GNU General Public License along with Boilerplate_XH. If not, see http://www.gnu.org/licenses/.</p>
-<p>© 2012-2021 Christoph M. Becker</p>
-<p>Russian tranlation © 2012 Lubomyr Kydray<br />
-Slovak translation © 2012 Dr. Martin Sereday</p>
+<p>Copyright © Christoph M. Becker</p>
+<p>Russian tranlation © Lubomyr Kydray<br> Slovak translation © Dr. Martin Sereday</p>
 <h2 id="credits">Credits</h2>
 <p>Boilerplate_XH was inspired by <em>rühgallisaniener</em> and <em>Hoffmann5928</em>.</p>
 <p>The plugin icon is designed by <a href="http://www.notmart.org/">Mart (Marco Martin)</a>. Many thanks for publishing this icon under GPL.</p>
