--- a/tests/approvals/InfoControllerTest.testRenderInfo.approved.html
+++ b/tests/approvals/InfoControllerTest.testRenderInfo.approved.html
@@ -1,7 +1,7 @@
 <!-- Boilerplate info -->
 <h1>Boilerplate 2.1-dev</h1>
 <h4>System check</h4>
-<div><p class="xh_success">PHP version ≥ 7.1.0</p>
+<div><p class="xh_fail">PHP version ≥ 7.1.0</p>
 </div>
 <div><p class="xh_warning">Folder “./plugins/boilerplate/css“ writable</p>
 </div>
