Add system checks for CMSimple_XH and Plib_XH

--- a/tests/approvals/InfoControllerTest.testRenderInfo.approved.html
+++ b/tests/approvals/InfoControllerTest.testRenderInfo.approved.html
@@ -1,11 +1,9 @@
 <!-- Boilerplate info -->
 <h1>Boilerplate 2.1-dev</h1>
 <h4>System check</h4>
-<div><p class="xh_fail">PHP version ≥ 7.1.0</p>
-</div>
-<div><p class="xh_warning">Folder “./plugins/boilerplate/css“ writable</p>
-</div>
-<div><p class="xh_warning">Folder “./plugins/boilerplate/languages/“ writable</p>
-</div>
-<div><p class="xh_warning">Folder “./content/boilerplate/“ writable</p>
-</div>
+<p class="xh_fail">PHP version ≥ 7.1.0</p>
+<p class="xh_fail">CMSimple_XH version ≥ 1.7.0</p>
+<p class="xh_fail">Plib_XH version ≥ 1.2</p>
+<p class="xh_warning">Folder “./plugins/boilerplate/css“ writable</p>
+<p class="xh_warning">Folder “./plugins/boilerplate/languages/“ writable</p>
+<p class="xh_warning">Folder “./content/boilerplate/“ writable</p>
