Escape strings in view templates

--- a/tests/approvals/AdminControllerTest.testEditTextBlockSuccess.approved.html
+++ b/tests/approvals/AdminControllerTest.testEditTextBlockSuccess.approved.html
@@ -1,6 +1,6 @@
 <!-- Boilerplate edit -->
 <h1>Boilerplate – foo</h1>
-<form class="plugineditform" action="/?&boilerplate&admin=plugin_main&boilerplate_name=foo" method="post">
+<form class="plugineditform" action="/?&amp;boilerplate&amp;admin=plugin_main&amp;boilerplate_name=foo" method="post">
   <textarea class="plugintextarea" name="boilerplate_text" style="height: 600px">
     &lt;p&gt;some content&lt;/p&gt;  </textarea>
   <input type="hidden" name="admin" value="plugin_main">
