--- a/tests/approvals/InfoControllerTest.testRenderInfo.approved.html
+++ b/tests/approvals/InfoControllerTest.testRenderInfo.approved.html
@@ -1,5 +1,5 @@
 <!-- Boilerplate info -->
-<h1>Boilerplate 2.1-dev</h1>
+<h1>Boilerplate 2.1</h1>
 <h4>System check</h4>
 <p class="xh_fail">PHP version ≥ 7.1.0</p>
 <p class="xh_fail">CMSimple_XH version ≥ 1.7.0</p>
